# infrastructure

./: .gitignore  Cargo.toml  README.md  README.tpl  build.rs  fetcher.toml
.config/: zebrad.toml
cert/: cert.pem
chain_cache/client_rpc_tests/regtest/blocks/index/: LOG
chain_cache/client_rpc_tests/regtest/chainstate/: LOG
chain_cache/test/regtest/blocks/index/: LOG
chain_cache/test/regtest/chainstate/: LOG
chain_cache/test/regtest/database/: log.0000000001
contrib/: compare_chain_caches.sh
fetched_resources/test_binaries/lightwalletd/: shasum
fetched_resources/test_binaries/zcash-cli/: shasum
fetched_resources/test_binaries/zcashd/: shasum
fetched_resources/test_binaries/zebrad/: shasum
fetcher/: Cargo.toml  README.md  build.rs
fetcher-core/: Cargo.toml
fetcher-core/shasums/binaries/: zainod_shasum
fetcher-core/src/: binaries.rs  binary.rs  cache.rs  error.rs  lib.rs  utils.rs
fetcher-core/src/resources/: mod.rs  resource.rs
fetcher-core/src/resources/binaries/: binary.rs  binary_configs.rs  mod.rs
fetcher-core/tests/: test_utils.rs  unit_tests.rs
fetcher/checksums/: zingo-cli_shasum
fetcher/src/: binaries.rs  build.rs  lib.rs  utils.rs
services/: .gitignore  Cargo.toml  README.md
services/src/: build.rs  config.rs  fetcher.rs  indexer.rs  lib.rs  utils.rs  validator.rs
services/utils/: clear_binaries.sh  permission_down.sh  permission_up.sh  testme.sh
src/: build.rs  client.rs  config.rs  fetcher.rs  indexer.rs  launch.rs  lib.rs  main.rs  network.rs  test_fixtures.rs  utils.rs  validator.rs
test_binaries/: shasum.txt
tests/: integration.rs
testutils/: Cargo.toml
testutils/src/: client.rs  lib.rs  test_fixtures.rs
testutils/tests/: integration.rs
utils/: check_background.sh  clear_binaries.sh  compare_chain_caches.sh  regenerate_chain_caches_report_diff.sh  see_fetcher_target.sh  sync_zebrad_test.sh
zc-infra-nodes/: Cargo.toml
zc-infra-nodes/cert/: cert.pem
zc-infra-nodes/src/: config.rs  launch.rs  lib.rs  logs.rs
zc-infra-testutils/: Cargo.toml
zc-infra-testutils/chain_cache/client_rpc_tests/regtest/chainstate/: LOG
zc-infra-testutils/src/: client.rs  config.rs  lib.rs  test_fixtures.rs
zc-infra-testutils/tests/: integration.rs
