[package]
name = "zcash_local_net"
version = "0.1.0"
edition = "2021"

[features]
client = [ "dep:zcash_client_backend", "dep:zingo-netutils", "dep:zingolib" ]
test_fixtures = [ "client", "dep:tonic", "dep:tokio", "dep:tokio-stream"]

[dependencies]
# Zcash
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.11.2_plus_zingolabs_changes-1-g7ad60b5d5-2-g121371a08", features = [ "lightwalletd-tonic" ], optional = true}
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.11.2_plus_zingolabs_changes-1-g7ad60b5d5-2-g121371a08" }
zcash_protocol = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.11.2_plus_zingolabs_changes-1-g7ad60b5d5-2-g121371a08"  }

# Zebra
zebra-node-services = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v2.0.1", features = [ "rpc-client" ] }
zebra-rpc = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v2.0.1", features = [ "getblocktemplate-rpcs" ] }
zebra-chain = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v2.0.1" }

# Lightclient
# zingo-netutils = { git = "https://github.com/Oscar-Pepper/zingolib.git", branch = "zaino_dep_002_091024_95e5b0d8f9d5ee0485c6141533da2f727aeafae2_with_output_ordering", optional = true }
zingo-netutils = { git = "https://github.com/zingolabs/zingolib.git", branch = "dev", optional = true }
zingolib = { git = "https://github.com/zingolabs/zingolib.git", branch = "dev", features = [ "test-elevation" ], optional = true }

# RPC
tonic = {version = "0.12.2", features = ["tls", "tls-roots", "tls-webpki-roots"], optional = true }

# File
tempfile = "3.13.0"

# Network
portpicker = "0.1.1"
http = "1.1.0"

# Error handling
thiserror = "1.0.64"

# Logging
tracing = "0.1.40"

# Boilerplate reduction
getset = "0.1.3"

# Parsing
json = "0.12.4"
serde_json = "1.0.132"

# Encoding
hex = "0.4.3"

# Runtime
tokio = { version = "1.25.0", optional = true }
tokio-stream = { version = "0.1.16", optional = true }

[dev-dependencies]
# Lightclient
zingolib = { git = "https://github.com/zingolabs/zingolib.git", branch = "dev", features = [ "test-elevation" ] }

# Logging
tracing-subscriber = "0.3.15"

# Runtime
tokio = "1.25.0"
