[package]
name = "zcash_local_net"
version = "0.1.0"
edition = "2021"

[features]
client = [ "dep:zcash_client_backend", "dep:zingo-netutils", "dep:zingolib" ]
test_fixtures = [ "client", "dep:tonic", "dep:tokio", "dep:tokio-stream"]

[dependencies]
# Zcash
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2", features = [ "lightwalletd-tonic" ], optional = true }
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2" }
zcash_protocol = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2" }

# Zebra
zebra-node-services = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v2.0.1", features = [ "rpc-client" ] }
zebra-rpc = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v2.0.1", features = [ "getblocktemplate-rpcs" ] }
zebra-chain = { git = "https://github.com/ZcashFoundation/zebra.git", tag = "v2.0.1" }

# Lightclient
zingo-netutils = { git = "https://github.com/zingolabs/zingolib.git", tag = "zaino_dep_003", optional = true }
zingolib = { git = "https://github.com/zingolabs/zingolib.git", tag = "zaino_dep_003", features = [ "test-elevation" ], optional = true }

# RPC
tonic = {version = "0.12.2", features = ["tls", "tls-roots", "tls-webpki-roots"], optional = true }

# File
tempfile = "3.13.0"

# Network
portpicker = "0.1.1"
http = "1.1.0"

# Error handling
thiserror = "1.0.64"

# Logging
tracing = "0.1.40"

# Boilerplate reduction
getset = "0.1.3"

# Parsing
json = "0.12.4"
serde_json = "1.0.132"

# Encoding
hex = "0.4.3"

# Runtime
tokio = { version = "1.25.0", optional = true }
tokio-stream = { version = "0.1.16", optional = true }

[dev-dependencies]
# Lightclient
zingolib = { git = "https://github.com/zingolabs/zingolib.git", tag = "zaino_dep_003", features = [ "test-elevation" ] }

# Logging
tracing-subscriber = "0.3.15"

# Runtime
tokio = "1.25.0"
