[workspace]
members = [
  "services",
  "testutils",
  "fetcher"
, "fetcher-core"]
resolver = "2"

[workspace.dependencies]
getset = "0.1.3"
hex = "0.4.3"
http = "1.1.0"
json = "0.12.4"
portpicker = "0.1.1"
reqwest = "0.12.11"
serde_json = "1.0.132"
sha2 = "0.10.8"
tempfile = "3.13.0"
thiserror = "1.0.64"
tokio = "1.42.0"
tokio-stream = "0.1.16"
tonic = "0.12.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.15"
zcash_client_backend = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2" }
zcash_primitives = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2" }
zcash_protocol = { git = "https://github.com/zingolabs/librustzcash.git", tag = "zcash_client_sqlite-0.12.1_plus_zingolabs_changes-test_2" }
zebra-chain = { git = "https://github.com/ZcashFoundation/zebra.git" }
zebra-node-services = { git = "https://github.com/ZcashFoundation/zebra.git" }
zebra-rpc = { git = "https://github.com/ZcashFoundation/zebra.git" }
zingo-netutils = { git = "https://github.com/zingolabs/zingolib.git", tag = "zaino_dep_004" }
zingolib = { git = "https://github.com/zingolabs/zingolib.git", tag = "zaino_dep_004" }
