[package]
name = "zingo-infra-fetcher-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["macros", "fs", "rt-multi-thread"] }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true, features = ["zstd", "rustls-tls-manual-roots"] }
