[package]
name = "zingo-infra-fetcher"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# [lib]
# name = "fetcher"
# path = "src/lib.rs"

[dependencies]

[build-dependencies]
hex = { workspace = true }
reqwest = { workspace = true, features = ["zstd", "rustls-tls-manual-roots"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs", "rt-multi-thread"] }
