[package]
name = "zingo-infra-testutils"
version = "0.1.0"
edition = "2021"
license = "MIT License"

[badges]
github = { repository = "zingolabs/infrastructure/testutils" }

[features]
services = []

[dependencies]
# Local
zingo-infra-services = { path = "../services" }
# Zingo
zingo-netutils = { workspace = true }
zingolib = { workspace = true, features = ["test-elevation"] }
#Zcash
zcash_client_backend = { workspace = true }
zcash_protocol = { workspace = true }
zcash_primitives = { workspace = true }
#Community
tonic = { workspace = true }
tempfile = { workspace = true }
portpicker = { workspace = true }
http = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
