[package]
name = "zc-infra-nodes"
version = "0.1.0"
edition = "2021"
license = "MIT License"
build="src/build.rs"

[badges]
github = { repository = "zingolabs/zc-infrastructure/zc-infra-nodes" }

[dependencies]
# Zcash
zcash_primitives = { workspace = true }
zcash_protocol = { workspace = true }

# Zebra
zebra-node-services = { workspace = true, features = ["rpc-client"] }
zebra-rpc = { workspace = true, features = ["getblocktemplate-rpcs"] }
zebra-chain = { workspace = true }

# File
tempfile = { workspace = true }

# Network
portpicker = { workspace = true }
http = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Boilerplate reduction
getset = { workspace = true }

# Parsing
json = { workspace = true }
serde_json = { workspace = true }

# Encoding
hex = { workspace = true }

[build-dependencies]
hex = { workspace = true }
reqwest = { workspace = true, features = ["zstd", "rustls-tls-manual-roots"] }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs", "rt-multi-thread"] }
