[package]
name = "zc-infra-testutils"
version = "0.1.0"
edition = "2021"
license = "MIT License"

[badges]
github = { repository = "zingolabs/zc-infrastructure/zc-infra-testutils" }

[dependencies]
# zc-infrastructure
zc-infra-nodes = { path = "../zc-infra-nodes" }
# Zcash
zcash_client_backend = { workspace = true, features = ["lightwalletd-tonic"] }
zcash_primitives = { workspace = true }
zcash_protocol = { workspace = true }

# Zebra
zebra-node-services = { workspace = true, features = ["rpc-client"] }
zebra-rpc = { workspace = true, features = ["getblocktemplate-rpcs"] }
zebra-chain = { workspace = true }

# Lightclient
zingo-netutils = { workspace = true }
zingolib = { workspace = true, features = ["test-elevation"] }

# RPC
tonic = { workspace = true, features = ["tls", "tls-roots", "tls-webpki-roots"] }

# File
tempfile = { workspace = true }

# Client
portpicker = { workspace = true }
http = { workspace = true }

# Logging
tracing-subscriber = { workspace = true }

# Runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }
