[package]
name = "zc-infra-testutils"
version = "0.1.0"
edition = "2021"
license = "MIT License"

[badges]
github = { repository = "zingolabs/zc-infrastructure/zc-infra-testutils" }

[dependencies]
zc-infra-nodes = { path = "../zc-infra-nodes" }
zcash_client_backend = { workspace = true, features = ["lightwalletd-tonic"] }
zcash_protocol = { workspace = true }
zcash_primitives = { workspace = true }
zingo-netutils = { workspace = true }
zingolib = { workspace = true, features = ["test-elevation"] }
tonic = { workspace = true, features = ["tls", "tls-roots", "tls-webpki-roots"] }
tempfile = { workspace = true }
portpicker = { workspace = true }
http = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
